fix: security hardening and CI test enforcement
- CI: Remove -DskipTests, use 'mvn verify' to actually run tests and JaCoCo coverage checks
- CI: Add test config file (test-rebalancer-config.json) with dummy credentials so
  @SpringBootTest can load Spring context in CI where the real config doesn't exist
- CI: Make config file path injectable via Spring property (app.config-file)
- Security: Sanitize API credentials from GET /api/config response
- Security: Preserve server-side credentials on POST /api/config (client never receives them)
- Security: Add CORS configuration restricting API access to localhost origins
- Bug fix: ConfigService.updateConfig() now validates BEFORE assigning to field
  (previously, failed validation left the runtime config corrupted)
- Thread safety: Add synchronized to ConfigService.getConfig()/updateConfig()
  (rebalancing loop reads config on a separate thread from the web controller)
- Updated DashboardControllerTest to verify credential sanitization