@@ -2,6 +2,9 @@ package com.gemini.krakenbot.controller;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.gemini.krakenbot.config.AppConfig;
+import com.gemini.krakenbot.config.KrakenCredentials;
+import com.gemini.krakenbot.config.Settings;
+import com.gemini.krakenbot.config.Allocation;
 import com.gemini.krakenbot.model.PortfolioSnapshot;
 import com.gemini.krakenbot.service.ConfigService;
 import com.gemini.krakenbot.service.TradeHistoryService;
@@ -24,6 +27,7 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 class DashboardControllerTest {
@@ -68,22 +72,34 @@ class DashboardControllerTest {
     }
 
     @Test
-    void getConfig_ReturnsConfig() throws Exception {
-        AppConfig config = new AppConfig(null, null, Collections.emptyList());
+    void getConfig_ReturnsConfigWithSanitizedCredentials() throws Exception {
+        AppConfig config = new AppConfig(
+                new KrakenCredentials("real-api-key", "real-private-key"),
+                new Settings(60L, 2.0, 1.0, true, 0.0, 1.0),
+                List.of(new Allocation("USD", 100.0)));
         when(configService.getConfig()).thenReturn(config);
 
         mockMvc.perform(get("/api/config"))
-                .andExpect(status().isOk());
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.kraken.apiKey").isEmpty())
+                .andExpect(jsonPath("$.kraken.privateKey").isEmpty())
+                .andExpect(jsonPath("$.settings.loopDelaySeconds").value(60));
     }
 
     @Test
-    void updateConfig_UpdatesAndReturnsConfig() throws Exception {
-        AppConfig config = new AppConfig(null, null, Collections.emptyList());
-        when(configService.getConfig()).thenReturn(config);
+    void updateConfig_PreservesServerCredentials() throws Exception {
+        AppConfig serverConfig = new AppConfig(
+                new KrakenCredentials("server-key", "server-secret"),
+                new Settings(60L, 2.0, 1.0, true, 0.0, 1.0),
+                List.of(new Allocation("USD", 100.0)));
+        when(configService.getConfig()).thenReturn(serverConfig);
+
+        // Client sends config without real credentials
+        AppConfig clientConfig = new AppConfig(null, serverConfig.settings(), serverConfig.allocations());
 
         mockMvc.perform(post("/api/config")
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(config)))
+                .content(objectMapper.writeValueAsString(clientConfig)))
                 .andExpect(status().isOk());
 
         verify(configService).updateConfig(any(AppConfig.class));
